- Bulding out the web interface.
- Release version 1.1.3

--- a/src/solrmonitor/web/html/header.html
+++ b/src/solrmonitor/web/html/header.html
@@ -3,6 +3,17 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            li {
+                padding-bottom: 5px;
+                padding-top: 5px;
+            }
+            
+            ul {
+                list-style-type: circle;
+            }
+        </style>
     </head>
     <body>
+        <h2>Solr and Fusion Internal Reporting Monitor (SAFIRM)</h2>
         <div> 
