UI work in progress

--- a/src/solrmonitor/web/html/404.html
+++ b/src/solrmonitor/web/html/404.html
@@ -6,17 +6,17 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Solr and Fusion Internal Reporting Monitor (SAFIRM)</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div>
-            <h2>Welcome to the Solr/Fusion Monitor, and open source offering by Capture Club. </h2>
+            <h2>SAFIRM was unable to process this request.  </h2>
             <div> <p> Please choose an action: </p>
                 <div>
                     <ul>
-                        <li><a href="/status">Current Status</a></li>
+                        <li><a href="/">Home</a></li>
                     </ul>
                 </div>
 
