--- a/src/solrmonitor/web/html/nav.html
+++ b/src/solrmonitor/web/html/nav.html
@@ -1,6 +1,7 @@
    <div> <p> Please choose an action: </p>
                 <div>
-                    <ul>
+                    <ul id="nav" style="list-style-type: none; ">
+                         <li><a href="/">Home</a></li>
                         <li><a href="/status">Current Status</a></li>
                         <li><a href="/monthly">Current Monthly Overview</a></li>
                     </ul>
